--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-Django==1.11
-psycopg2==2.7.4
+Django==1.11.15
+Pillow==5.0.0
+chardet==2.2.1
+colorama==0.2.5
+django-forms-bootstrap==3.1.0
+html5lib==0.999
+pycurl==7.19.3
+pygobject==3.12.0
+python-apt==0.9.3.5ubuntu2
 pytz==2018.3
+requests==2.2.1
+six==1.5.2
+stripe==1.79.1
+unattended-upgrades==0.1
+urllib3==1.7.1
+wheel==0.24.0
